# luajit-decompiler-v2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
.github/workflows/: ci.yml
ast/: ast.cpp  ast.h  conditionBuilder.h  function.h
bytecode/: bytecode.cpp  bytecode.h
lua/: lua.cpp  lua.h
tests/: simple_test.lua  simple_test.luac
